name:                hascookie
version:             0.1.0.0
author:              2mol
maintainer:          2mol@users.noreply.github.com
build-type:          Simple
cabal-version:       >=1.10

executable hascookie
  main-is:            Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:      base >=4.12 && <4.14
                    , text
                    , Spock >=0.13
                    , Spock-lucid
                    , lucid
                    , http-types
                    , reroute
                    , mtl
  hs-source-dirs:     src
  default-language:   Haskell2010
