cabal-version:       2.2

name:                hascookie
version:             0.1.0.0
author:              2mol
maintainer:          2mol@users.noreply.github.com
build-type:          Simple

common common-exe
  ghc-options:
    -threaded -rtsopts
    -- -threaded -O2 -rtsopts -with-rtsopts=-N
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

executable hascookie
  main-is:         Main.hs
  exposed-modules: Main
  other-modules:
    UI
    DB
  build-depends:
    , base >=4.12 && <4.14
    , text
    , Spock >=0.13
    , Spock-lucid
    , lucid
    , http-types
    , reroute
    , mtl
  hs-source-dirs:   src
  default-language: Haskell2010
